force-app/main/default/objects/RollupOperation__c/RollupOperation__c.object-meta.xml
<CustomObject>
    <description>Stores lookup-based Rollup definitions, executed by TriggerHandlers. The original records are stored in the RollupOperations.json static resource for easier deployment. DemoDataCreation is to be used to load the records defined there into this object</description>
    <label>Rollup Operation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rollup Operation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Operations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>