force-app/main/default/objects/RollupOperation__c/fields/ParentObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectAPI__c</fullName>
    <description>Either Custom or Standard Object API name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentObjectAPI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>