force-app/main/default/objects/RollupOperation__c/fields/ParentRollupFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>ParentRollupFieldAPI__c</fullName>
    <description>The rollup field which contains the calculated value on the Parent object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentRollupFieldAPI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>